<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mecanum_bot_bringup</name>
  <version>1.0.0</version>
  <description>
    ROS 2 launch scripts for mecanum_bot
  </description>
  <maintainer email="yadunund@gmail.com">Yadunund</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>mecanum_bot_description</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
