<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mecanum_bot_teleop</name>
  <version>0.0.0</version>
  <description>A package to teleoperate the mecanum bot</description>
  <maintainer email="yadunund@gmail.org">yadu</maintainer>
  <license>Apache License 2.0</license>

  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
